# autd3-bench

./: Cargo.toml
benches/: bench.rs
benches/gain/: focus.rs  greedy.rs  mod.rs  naive.rs
benches/modulation/: sine.rs
benches/stm/: focus.rs  gain.rs  mod.rs
